--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>
-  Indecision App
+  Expensify
 </title>
-
+<link rel="stylesheet" type="text/css" href="/styles.css"/>
 </head>
 <body>
   <div id="app"></div>
